--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,11 @@
 
 h1 {
   color: rgb(226, 97, 97);
-  display: block;
   font-family: arial;
-  font-size: 30px;
+  font-size: 24px;
+  line-height: 28px;
   margin: 0;
+  margin-bottom: 0;
 }
 
 ul {
@@ -23,10 +24,10 @@ li {
 
 .weather-app {
   border: 1px solid #dadde1;
+  border-radius: 5px;
   padding: 20px;
-  margin: 20px auto;
-  border-radius: 10px;
-  max-width: 700 px;
+  margin: 30px auto;
+  max-width: 600 px;
 }
 
 .temperature {
